code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Jul-2011 Jean-Marie Simonet
 # Removing install check
 # [#26443] PHP version check at installation says Joomla 1.6
 # [#26432] Banners Manager - trash icon visible when no trashed banners. Thanks Bill.

-------------------- 1.7.0 Stable Release [19-Jul-2011] ------------------

18-Jul-2011 Mark Dexter
 # Needed file was being deleted during update
 # New installation language file

17-Jul-2011 Mark Dexter
 # Fix banner issue in sample data (Elin Waring)

17-Jul-2011 Jean-Marie Simonet
 # Updating admin en-GB.xml
 - Deleting plg_authentication_example.ini and sys.ini files

16-Jul-2011 Mark Dexter
 ^ Update sample data for 1.7 (Elin Waring)
 # [#26418] set_time_limit calls when safe mode on causes warnings
 # [#26417] Category Request variable not showing in menu mandatory parameters when using template override

15-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: lo-LA
 # [#26397] Joomla! Administration Login Page Does Not Show Language in the Dropdown even if the Admin Pack is Installed
 $ Updating installation ini files: ar-AA, ca-ES
 # [#26392] issues when updating from 1.6.5 to 1.7.0 using ftp. Thanks Christophe.

14-Jul-2011 Jean-Marie Simonet
 # [#26398] In the Configuration screen the label Database Prefix should be changed to Table Prefix
 $ Updating ta-IN.xml

13-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: af-ZA, ta-IN
 # [#26378] Template and module managers using different icons for duplicate. Thanks Elin.
 $ Correcting en-GB.xml
 $ Updating installation ini files: de-DE

-------------------- 1.7.0 RC1 Release [12-Jul-2011] ------------------

12-Jul-2011 Mark Dexter
 # [#26075] Update FancyUpload to version 3.0.1.
 # [#26368] Fix typo in concatenate for mysql and mysqli drivers
 # [#25950] "active" class attribute for Module Category List View