@@ -69,13 +69,13 @@ class BannersViewClients extends JView
 			JToolBarHelper::archiveList('clients.archive');
 			JToolBarHelper::checkin('clients.checkin');
 		}
-		if ($canDo->get('core.edit.state')) {
-			JToolBarHelper::trash('clients.trash');
-		}
-		if ( $canDo->get('core.delete')) {
+		if ($this->state->get('filter.state') == -2 && $canDo->get('core.delete')) {
 			JToolBarHelper::deleteList('', 'clients.delete', 'JTOOLBAR_EMPTY_TRASH');
 			JToolBarHelper::divider();
-		}
+		} else if ($canDo->get('core.edit.state')) {
+			JToolBarHelper::trash('clients.trash');
+			JToolBarHelper::divider();
+		}	
 
 		if ($canDo->get('core.admin')) {
 			JToolBarHelper::preferences('com_banners');
